cluster/network/dex/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dex
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/target: raspbernetes.com
    external-dns.alpha.kubernetes.io/external: 'true'
spec:
  hosts:
    - 'dex.raspbernetes.com'
  gateways:
    - istio-system/istio-system-ingress-gateway
  http:
    - match:
        - uri:
            prefix: '/'
      route:
        - destination:
            port:
              number: 5556
            host: dex.network.svc.cluster.local
